// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders small box shadow 1`] = `
.c0 {
  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.125);
  border-radius: 4px;
}

<div
  className="c0 "
/>
`;

exports[`Card renders with 1px border 1`] = `
.c0 {
  border: 1px solid #dde1e4;
  border-radius: 4px;
}

<div
  className="c0 "
/>
`;
